<resources>
    <string name="app_name">Админ</string>
    <string name="version_app">Версия приложения %1$s</string>
    <string name="title_common_can_not_load_data">Не удается загрузить данные</string>
    <string name="title_common_loading">Загрузка</string>
    <string name="title_common_select_date">Выбрать дату</string>
    <string name="title_common_select_time">Выбрать дату</string>
    <string name="title_edit_priority">"Изменение порядка</string>
    <string name="msg_common_check_connection_and_retry">Проверьте соединение и повторите попытку</string>
    <string name="msg_common_non_working_day">Сегодня запланирован нерабочий день</string>
    <string name="msg_common_cafe">Ресторан</string>
    <string name="msg_common_period">Период</string>
    <string name="description_product">Фото блюда</string>
    <string name="description_ic_checked">Иконка выбрано</string>
    <string name="description_common_navigate">Перейти</string>
    <string name="description_common_selected">Выбран</string>
    <string name="description_logo">Логотип</string>
    <string name="action_retry">Повторить попытку</string>
    <string name="action_common_cancel">Отмена</string>
    <string name="action_common_ok">Ок</string>
    <string name="action_common_logout">Выйти</string>
    <string name="action_common_delete">Удалить</string>
    <string name="action_common_add_photo">Добавить фото</string>
    <string name="action_common_replace_photo">Заменить фото</string>
    <string name="error_common_no_internet">Нет подключения к интернету</string>
    <string name="error_common_update_failed">При обновлении данных произошла ошибка</string>
    <string name="error_common_loading_failed">При загрузке данных произошла ошибка</string>
    <string name="error_common_saving_failed">При сохранении данных произошла ошибка</string>
    <string name="error_common_deleting_failed">При удалении данных произошла ошибка</string>
    <string name="error_common_something_went_wrong">Что-то пошло не так</string>
    <string name="hint_login_login">Логин</string>
    <string name="hint_login_password">Пароль</string>
    <string name="action_login_enter">Войти</string>
    <string name="msg_login_version">Версия приложения %1$s</string>
    <string name="error_login_wrong_data">Неверный логин или пароль</string>
    <string name="error_login_wrong_login">Ошибка при входе</string>
    <string name="title_messaging_new_order">Новый заказ</string>
    <string name="msg_messaging_new_order">Новый заказ</string>
    <string name="title_orders">Заказы</string>
    <string name="title_order_list_select_cafe">Выберите кафе</string>
    <string name="error_order_list_connection">Ошибка. Проверьте подключение\nк интернету и обновите страницу</string>
    <string name="msg_order_details_order_time">Дата и время заказа</string>
    <string name="msg_order_details_pickup_method">Способ получения</string>
    <string name="msg_order_details_payment_method">Способ оплаты</string>
    <string name="msg_order_details_phone">Номер телефона</string>
    <string name="msg_order_details_deferred_time">Ко времени</string>
    <string name="msg_order_details_address">Адрес</string>
    <string name="msg_order_details_comment">Комментарий</string>
    <string name="msg_order_details_order_status">Статус</string>
    <string name="hint_order_details_order_status">Статус</string>
    <string name="msg_order_details_order_list">Список заказанных блюд</string>
    <string name="msg_order_details_order_cost">Сумма заказа</string>
    <string name="msg_order_details_delivery_cost">Доставка</string>
    <string name="msg_order_details_discount_cost">Скидка</string>
    <string name="msg_order_details_bonuses">Бонусная скидка</string>
    <string name="action_order_details_do_not_save">Не сохранять</string>
    <string name="action_order_details_save">Сохранить</string>
    <string name="title_order_details_alert">Внимание!</string>
    <string name="msg_order_details_alert">Отменить заказ?</string>
    <string name="action_order_details_yes">Да</string>
    <string name="action_order_details_no">Нет</string>
    <string name="title_order_details_choice_cafe">Выбрать кафе</string>
    <string name="title_order_status">Статус заказа</string>
    <string name="msg_order_details_saved">Заказ %1$s обновлен</string>
    <string name="msg_payment_cash">Наличные</string>
    <string name="msg_payment_card">Картой при получении</string>
    <string name="msg_payment_card_number">Переводом по номеру карты</string>
    <string name="msg_payment_phone_number">Переводом по номеру телефона</string>
    <string name="title_bottom_navigation_orders">Заказы</string>
    <string name="title_bottom_navigation_menu">Меню</string>
    <string name="title_bottom_navigation_profile">Профиль</string>
    <string name="title_statistic">Статистика</string>
    <string name="title_statistic_select_cafe">Выберите кафе</string>
    <string name="title_statistic_select_time_interval">Выберите период</string>
    <string name="action_product_statistic_load">Загрузить</string>
    <string name="msg_statistic_all_cafes">Все кафе в вашем городе</string>
    <string name="msg_statistic_orders">Заказов: %d</string>
    <string name="msg_statistic_day_interval">По дням</string>
    <string name="msg_statistic_week_interval">По неделям</string>
    <string name="msg_statistic_month_interval">По месяцам</string>
    <string name="msg_statistic_total_proceeds">Выручка</string>
    <string name="msg_statistic_total_count">Количество заказов</string>
    <string name="msg_statistic_average_check">Средний чек</string>
    <string name="msg_product_statistic_name">Название</string>
    <string name="msg_product_statistic_order_count">Количество заказов</string>
    <string name="msg_product_statistic_count">Количество</string>
    <string name="msg_product_statistic_cost">Стоимость</string>
    <string name="title_menu">Меню</string>
    <string name="action_menu_positions">Позиции</string>
    <string name="action_menu_addition_groups">Группы добавок</string>
    <string name="action_menu_additions">Добавки</string>
    <string name="action_menu_categories">Категории</string>
    <string name="title_menu_list_position_visible">Видимые позиции</string>
    <string name="title_menu_list_position_hidden">Скрытые позиции</string>
    <string name="action_menu_list_create">Создать</string>
    <string name="hint_common_menu_product_name">Название*</string>
    <string name="hint_common_menu_product_new_price">Актуальная цена*</string>
    <string name="hint_common_menu_product_old_price">Цена до скидки</string>
    <string name="hint_common_menu_product_nutrition">Вес/Объем</string>
    <string name="hint_common_menu_product_units">Единицы</string>
    <string name="hint_common_menu_product_description">Описание*</string>
    <string name="hint_common_menu_product_combo_description">Описание комбо</string>
    <string name="hint_common_menu_product_categories">Категории*</string>
    <string name="hint_common_menu_product_additions">Группы добавок</string>
    <string name="action_common_menu_product_recommend">Рекомендовать</string>
    <string name="action_common_menu_product_show_in_menu">Показывать в меню</string>
    <string name="error_common_menu_product_empty_name">Название не может быть пустым</string>
    <string name="error_common_menu_product_empty_new_price">Актульная цена не может быть пустой</string>
    <string name="error_common_menu_product_empty_photo">Добавьте фотографию</string>
    <string name="error_common_menu_product_low_old_price">Цена до скидки не может быть меньше актуальной</string>
    <string name="error_common_menu_product_nutrition_without_units">Укажите единицы измерения</string>
    <string name="error_common_menu_product_empty_description">Описание не может быть пустым</string>
    <string name="error_common_menu_product_long_description">Максимальная длина описания — 512 символов</string>
    <string name="error_common_menu_product_categories">Выберите категории</string>
    <string name="error_common_menu_product_addition_groups">Выберите группы добавок</string>
    <string name="error_common_menu_product_image_uploading">Не удалось загрузить изображение</string>
    <string name="title_create_menu_product_new_product">Новая позиция</string>
    <string name="action_create_menu_product_create">Создать</string>
    <string name="msg_create_menu_product_add_menu_added">%1$s добавлен</string>
    <string name="msg_edit_menu_product_updated">%1$s обновлён</string>
    <string name="title_crop_image">Обработка фото</string>
    <string-array name="array_common_menu_product_units">
        <item>г</item>
        <item>кг</item>
        <item>мл</item>
        <item>л</item>
        <item>шт</item>
    </string-array>
    <string name="title_notification">Считывание заказов c приложения PapaKarloAdmin</string>
    <string name="msg_notification_info">Ожидание заказов</string>
    <string name="title_profile">Профиль</string>
    <string name="hint_profile_manager">Менеджер</string>
    <string name="hint_profile_admin">Админ</string>
    <string name="action_profile_cafes">Рестораны</string>
    <string name="action_profile_settings">Настройки</string>
    <string name="action_profile_statistic">Статистика</string>
    <string name="action_profile_map">Районы доставки</string>
    <string name="msg_profile_close_cafe_settings">Теперь закрыть кафе можно\nв разделе \"Настройки\"</string>
    <string name="title_settings">Настройки</string>
    <string name="msg_settings_unlimited_notifications">Настойчивые оповещения</string>
    <string name="msg_settings_kitchen_appliances">Приборы</string>
    <string name="msg_settings_kitchen_appliances_hint">Пользователь должен указать количество приборов</string>
    <string name="msg_settings_type_work">Тип работы</string>
    <string name="msg_settings_status_delivery">Доставка</string>
    <string name="msg_settings_status_pickup">Самовывоз</string>
    <string name="msg_settings_status_pickup_delivery">Самовывоз и доставка</string>
    <string name="action_settings_save">Настройки сохранены</string>
    <string name="msg_settings_status_accept_orders">Не принимать заказы</string>
    <string name="title_settings_disable_orders">Отключить заказы?</string>
    <string name="msg_settings_disable_orders">Пользователи не смогут делать заказы</string>
    <string name="action_settings_disable">Отключить</string>
    <string name="action_work_load_cafe_disable">Загруженность кафе</string>
    <string name="msg_work_load_low">Низкая (до 1 часа)</string>
    <string name="msg_work_load_average">Средняя (до 1.5 часов)</string>
    <string name="msg_work_load_high">Высокая (до 2 часов)</string>
    <string name="title_cafe_list">Рестораны</string>
    <string name="msg_cafe_open">Открыто</string>
    <plurals name="msg_cafe_close_soon">
        <item quantity="one">Открыто. Закроется через %d минуту</item>
        <item quantity="few">Открыто. Закроется через %d минуты</item>
        <item quantity="other">Открыто. Закроется через %d минут</item>
    </plurals>
    <string name="msg_cafe_closed">Закрыто</string>
    <string name="hint_edit_cafe_from_time">Время начала работы</string>
    <string name="hint_edit_cafe_to_time">Время окончания работы</string>
    <string name="title_edit_cafe_non_working_days">Запланированные нерабочие дни</string>
    <string name="msg_edit_cafe_empty_non_working_days">Нажмите «Добавить», чтобы запланировать нерабочий день</string>
    <string name="action_edit_cafe_add">Добавить</string>
    <string name="title_edit_cafe_from_time">Время начала работы</string>
    <string name="title_edit_cafe_to_time">Время окончания работы</string>
    <string name="title_edit_cafe_delete_now_working_day">Удалить нерабочий день?</string>
    <string name="title_logout">Выйти из профиля?</string>
    <string name="msg_status_ready">Готов</string>
</resources>