<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/small_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/small_margin" />

    <TextView
        android:id="@+id/phoneTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/msg_order_details_phone"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneValueTv"
        style="@style/MediumRegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintStart_toStartOf="@id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/phoneTv"
        tools:text="+7 (900) 90-90" />

    <TextView
        android:id="@+id/timeTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/msg_order_details_order_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneTv"
        app:layout_constraintStart_toStartOf="@+id/centerGl" />

    <TextView
        android:id="@+id/timeValueTv"
        style="@style/MediumRegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneValueTv"
        app:layout_constraintStart_toStartOf="@+id/centerGl"
        tools:text="5 мая 12:00" />

    <TextView
        android:id="@+id/receiveMethodTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/msg_order_details_pickup_method"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/timeValueTv" />

    <TextView
        android:id="@+id/receiveMethodValueTv"
        style="@style/MediumRegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/receiveMethodTv"
        tools:text="Доставка" />

    <TextView
        android:id="@+id/deferredTimeTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/msg_order_details_deferred_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/receiveMethodTv"
        app:layout_constraintStart_toStartOf="@+id/centerGl" />

    <TextView
        android:id="@+id/deferredTimeValueTv"
        style="@style/MediumRegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintBaseline_toBaselineOf="@+id/receiveMethodValueTv"
        app:layout_constraintStart_toStartOf="@+id/centerGl"
        app:layout_constraintTop_toBottomOf="@+id/deferredTimeTv"
        tools:text="13:00" />

    <TextView
        android:id="@+id/addressTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/msg_order_details_address"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/receiveMethodValueTv" />

    <TextView
        android:id="@+id/addressValueTv"
        style="@style/MediumRegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintEnd_toEndOf="@id/rightGl"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/addressTv"
        tools:text="улица Чапаева, д 22А, кв 15" />

    <TextView
        android:id="@+id/commentTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/msg_order_details_comment"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/addressValueTv" />

    <TextView
        android:id="@+id/commentValueTv"
        style="@style/MediumRegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintEnd_toEndOf="@id/rightGl"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/commentTv"
        tools:text="Сделайте вкусно" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/statusMcv"
        style="@style/DefaultMaterialCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        app:layout_constraintEnd_toEndOf="@id/rightGl"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/commentValueTv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding">

            <TextView
                android:id="@+id/statusTv"
                style="@style/SmallSecondaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/very_small_margin"
                android:text="@string/msg_order_details_order_status"
                app:layout_constraintEnd_toStartOf="@+id/statusIv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statusValueTv"
                style="@style/LargeRegularText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/very_small_margin"
                android:layout_marginEnd="@dimen/very_small_margin"
                app:layout_constraintEnd_toStartOf="@+id/statusIv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusTv"
                tools:text="@string/msg_status_ready" />

            <ImageView
                android:id="@+id/statusIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/productListTv"
        style="@style/SmallSecondaryText"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/very_small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/msg_order_details_order_list"
        app:layout_constraintStart_toStartOf="@+id/leftGl"
        app:layout_constraintTop_toBottomOf="@+id/statusMcv" />

</androidx.constraintlayout.widget.ConstraintLayout>