<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bunbeauty.fooddeliveryadmin.view_model.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.log_in.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_til_login"
            style="@style/MaterialInputLayout"
            android:layout_margin="@dimen/large_margin"
            android:hint="@string/hint_login_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_et_login"
                style="@style/MaterialInput"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_til_password"
            style="@style/MaterialInputLayout"
            android:layout_margin="@dimen/large_margin"
            android:hint="@string/hint_login_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_til_login"
            app:startIconDrawable="@drawable/ic_locked">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_et_password"
                style="@style/MaterialInput"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.bunbeauty.fooddeliveryadmin.ui.view.ProgressButton
            android:id="@+id/fragment_login_btn_login"
            style="@style/MainButton"
            android:onClick="@{()->viewModel.loginClick()}"
            android:text="@string/action_login_enter"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            bind:isLoading="@{viewModel.isLoadingButton}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>