<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_statistic_details_btn_back"
            style="@style/TransparentCircleButton"
            android:layout_margin="@dimen/small_margin"
            app:icon="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayCircle" />

        <TextView
            android:id="@+id/fragment_statistic_details_tv_period"
            style="@style/LargeBoldCenterText"
            android:layout_marginTop="@dimen/medium_margin"
            app:layout_constraintBaseline_toBaselineOf="@+id/fragment_statistic_details_btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:text="16 июня" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragment_statistic_details_mcv_main"
            style="@style/DefaultMaterialCard"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_statistic_details_btn_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragment_statistic_details_tv_total_proceeds_value"
                    style="@style/LargeBoldCenterText"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:layout_marginEnd="@dimen/very_small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_statistic_details_tv_total_count_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:text="15000 ₽" />

                <TextView
                    android:id="@+id/fragment_statistic_details_tv_total_proceeds"
                    style="@style/MediumSecondaryRegularCenterText"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/very_small_margin"
                    android:layout_marginEnd="@dimen/very_small_margin"
                    android:text="@string/msg_statistic_total_proceeds"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_statistic_details_tv_total_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_statistic_details_tv_total_proceeds_value" />

                <TextView
                    android:id="@+id/fragment_statistic_details_tv_total_count_value"
                    style="@style/LargeBoldCenterText"
                    android:layout_marginStart="@dimen/very_small_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:layout_marginEnd="@dimen/very_small_margin"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_statistic_details_tv_total_average_check_value"
                    app:layout_constraintStart_toEndOf="@+id/fragment_statistic_details_tv_total_proceeds_value"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:text="3" />

                <TextView
                    android:id="@+id/fragment_statistic_details_tv_total_count"
                    style="@style/MediumSecondaryRegularCenterText"
                    android:layout_marginStart="@dimen/very_small_margin"
                    android:layout_marginTop="@dimen/very_small_margin"
                    android:layout_marginEnd="@dimen/very_small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/msg_statistic_total_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_statistic_details_tv_total_average_check"
                    app:layout_constraintStart_toEndOf="@+id/fragment_statistic_details_tv_total_proceeds"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_statistic_details_tv_total_count_value" />

                <TextView
                    android:id="@+id/fragment_statistic_details_tv_total_average_check_value"
                    style="@style/LargeBoldCenterText"
                    android:layout_marginStart="@dimen/very_small_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fragment_statistic_details_tv_total_count_value"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:text="990 ₽" />

                <TextView
                    android:id="@+id/fragment_statistic_details_tv_total_average_check"
                    style="@style/MediumSecondaryRegularCenterText"
                    android:layout_marginStart="@dimen/very_small_margin"
                    android:layout_marginTop="@dimen/very_small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/msg_statistic_average_check"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fragment_statistic_details_tv_total_count"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_statistic_details_tv_total_average_check_value" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_statistic_details_cl_column_names"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_statistic_details_mcv_main">

            <TextView
                android:id="@+id/fragment_statistic_details_tv_name"
                style="@style/SmallSecondaryCenterText"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/msg_product_statistic_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/element_product_statistic_gl_center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/fragment_statistic_details_tv_order_count"
                style="@style/SmallSecondaryCenterText"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/very_small_margin"
                android:text="@string/msg_product_statistic_order_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragment_statistic_details_tv_count"
                app:layout_constraintStart_toStartOf="@+id/element_product_statistic_gl_center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_statistic_details_tv_count"
                style="@style/SmallSecondaryCenterText"
                android:layout_marginStart="@dimen/very_small_margin"
                android:layout_marginEnd="@dimen/very_small_margin"
                android:text="@string/msg_product_statistic_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragment_statistic_details_tv_cost"
                app:layout_constraintStart_toEndOf="@+id/fragment_statistic_details_tv_order_count"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_statistic_details_tv_cost"
                style="@style/SmallSecondaryCenterText"
                android:layout_marginStart="@dimen/very_small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/msg_product_statistic_cost"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_statistic_details_tv_count"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_statistic_details_rv_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/small_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_statistic_details_cl_column_names"
            tool:listitem="@layout/element_product_statistic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>